syntax = "proto3";

import "dto/analysis_by_sprint.proto";
import "dto/analysis_by_tag.proto";
import "dto/analysis_by_ticket.proto";

option csharp_namespace = "Proto.Requests.AnalysisData";

message GetSprintAnalysisById {
  string sprint_id = 1;
}

message GetTagAnalysisById {
  string tag_id = 1;
}

message GetTicketAnalysisById {
  string ticket_id = 1;
}

service NoteTypesRequestService {
  rpc GetSprintAnalysis(GetSprintAnalysisById) returns (AnalysisBySprint);
  rpc GetTagAnalysis(GetTagAnalysisById) returns (AnalysisByTag);
  rpc GetTicketAnalysis(GetTicketAnalysisById) returns (AnalysisByTicket);
}
